# FusionMark

./: .gitignore  AGENTS.md  API_DOCUMENTATION.md  README.md  api_server.py  celery_config.py  celery_tasks.py  config.yaml  config_example.json  config_example.yaml  full_pipeline_config.yaml  full_pipeline_demo.py  full_pipeline_service.py  langextract_demo.py  log_config.json  md_highlight_pdf.py  md_highlight_pipeline.py  md_highlight_service.py  md_highlight_service_demo.py  mineru_client.py  out.html  pdf_highlight_demo.py  pymupdf_langextract_fusion.py  pymupdf_text_extractor.py  pymupdf_vs_mineru_comparison.py  pyproject.toml  requirements.txt  start_server.py  前端技术文档实现思路.md
.beads/: config.yaml  issues.jsonl  metadata.json
agent-copilot/: .env.example  README.md  pyproject.toml
celery_chain_pipeline/: README.md  __init__.py  api_server.py  celery_config.py  celery_tasks.py  websocket_handler.py
docs/: A770跑模型.md  DOM-Tracking-Middleware-方案.md  FASTAPI_TEST_PLAN.md  Fusion_Mark_Config_Copilot_Design.md  Fusion_Mark_Config_Copilot_Implementation_Recommendation.md  IMPLEMENTATION_FUSION_PIPELINE.md  LangExtract-文本解析速度低下架构升级方案.md  Local-MinIO-存储插件架构设计方案.md  Markdown 文本与纯文本映射.md  PDF_HIGHLIGHT_PLAN.md  PROGRESS_LOG.md  RESEARCH_PHASE_2_FUSION.md  WORKFLOW_MD_HIGHLIGHT.md  celery_async_task_design.md  celery_full_pipeline_design.md  dolt移动硬盘插拔安装逻辑.md  vue前端生产技术架构.md  web-pc-视觉方案2  web-pc-视觉设计方案.md  前端实时状态日志面板设计.md  前端技术文档实现思路.md  提取实体结果入Redis与前端展示方案.md  轻量化Redis进度架构设计.md
examples/: full_pipeline_demo.py  md_highlight_service_demo.py  (+2 more)
frontend/: index.html
(+264 files in other folders)
