[project]
name = "fusion-mark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.3",
    "fastapi>=0.136.0",
    "kombu>=5.6.2",
    "langextract>=1.2.1",
    "markdown>=3.10.2",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "uvicorn>=0.44.0",
    "weasyprint>=68.1",
    "websockets>=16.0",
]
